connectivity to db via jpa

--- a/football-team/src/main/resources/templates/transfer.html
+++ b/football-team/src/main/resources/templates/transfer.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div class="w-75 p-3" style="background-color: #eee;">
-  <h1>Create player</h1>
+  <h1>Transfer player</h1>
   <form action="#" th:action="@{/teams/team/addPlayer}" th:object="${helper}" method="post" id="createForm">
     <div class="mb-3">
       <label for="exampleInputEmail1" class="form-label">Player id: </label>
